# ReactorChat

./: 01C++聊天室 项目启动.doc  02 C++聊天室 需求说明书.doc  03C++聊天室 系统设计说明书.doc  ClientHandler.cpp  ClientHandler.hpp  Protocol.hpp  README.md  Reactor.cpp  Reactor.hpp  ReactorServer.cpp  ReactorServer.hpp  ServerAcceptor.cpp  main.cpp  private.pem
ChatServer/: CMakeLists.txt  TEST.rar  main.cpp
ChatServer/TEST/TEST/: TEST  TEST.cpp  核心性能指标.md
ChatServer/authClient/: Authentication.cpp  Authentication.hpp
ChatServer/authServer/: AuthServer.cpp  AuthServiceImpl.cpp  AuthServiceImpl.hpp  my_chat_db.sql  private.pem
ChatServer/logger/: LoggerClient.cpp  LoggerClient.hpp  log_macros.hpp  loggerd.cpp  start_loggerd.hpp
ChatServer/protocol/: Protocol.hpp
ChatServer/reactor/: ClientHandler.cpp  ClientHandler.hpp  Reactor.hpp  ReactorServer.cpp  ServerAcceptor.hpp
ChatServer/rpcGenerated/: Auth.grpc.pb.cc  Auth.pb.cc  Auth.pb.h
ChatServer/server/: Protocol.hpp
ChatServer/threadpool/: ThreadPool.cpp  ThreadPool.hpp
Client/: .qmake.stash  Client.pro  Client.pro.user.ca5c2a7.22  Makefile  Makefile.Debug  Makefile.Release  client_widget.cpp  client_widget.h  client_widget.ui  client_widget.ui.autosave  image.qrc  log_in.cpp  log_in.h  log_in.ui  main.cpp  public.pem  ui_client_widget.h  ui_log_in.h
Client/.qtc_clangd/: compile_commands.json
Client/.qtc_clangd/.cache/clangd/index/: QDateTime.0E92F52E7FABED45.idx  QLineEdit.5DA0928F7E51BC5E.idx  QListWidget.72B392C059C80BEB.idx  QPainter.2CF8C48A41005C11.idx  QProgressBar.7E272EF1B21185AC.idx  QTextBrowser.174C8BDF42EE506D.idx  __msvc_bit_utils.hpp.C0B252ECFDA47FFE.idx  __msvc_iter_core.hpp.C8270BE47418C8D7.idx  asn1err.h.987C097C7AA0719E.idx  assert.h.F38E9294719157DB.idx  atomic.BE2385DE83D6B78B.idx  bioerr.h.DA77F4CB235289DB.idx  buffererr.h.114037C4A05A516D.idx  cfloat.900A2FC6B76856AA.idx  client_widget.cpp.6C6B58500454861F.idx  client_widget.h.2878F6CB9E552052.idx  conf.h.7AE3722FF23C637D.idx  core.h.EF2B5CB316017346.idx  corecrt_memcpy_s.h.A300D03F211EE5C3.idx  corecrt_wstdio.h.6A861A68D78AABC9.idx  cryptoerr.h.F9C39065A0ED3861.idx  cryptoerr_legacy.h.8A491B3B9B323E4F.idx  cstdint.194BE123DB5DE548.idx  dh.h.5D98A6FFB820757D.idx  dherr.h.E1DD9E3077DEEEFC.idx  err.h.05E974B8AE1016B7.idx  evp.h.99315B21DAAD16C2.idx  evperr.h.E5D1C16FEC75E24C.idx  float.h.E76E1470C9222813.idx  http.h.EA7268EF39600B24.idx  intrin.h.F2B3AD064D82D074.idx  istream.E096580BD1963D2D.idx  lhash.h.32BCA5FD15E5F2B9.idx  log_in.cpp.076062A7D638DE1F.idx  (+87 more)
Client/debug/: Client.ilk  moc_client_widget.cpp  moc_log_in.cpp  moc_predefs.h  moc_tcpclient.cpp
reactor/: Reactor.cpp  ReactorServer.hpp  ServerAcceptor.cpp
rpcGenerated/: Auth.grpc.pb.h  Auth.proto
server/: Server.cpp  Server.hpp
threadpool/: ThreadPool.cpp  ThreadPool.hpp
